Added logics
