# stock/specification/src/main/java/com/stock/model/StockPrice.java
@@ -1,0 +1,162 @@
+package com.stock.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.time.LocalDate;
+import org.openapitools.jackson.nullable.JsonNullable;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * StockPrice
+ */
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-11-28T01:21:00.362+05:30[Asia/Kolkata]")
+public class StockPrice   {
+  @JsonProperty("id")
+  private Integer id;
+
+  @JsonProperty("stockPrice")
+  private Float stockPrice = null;
+
+  @JsonProperty("startDate")
+  @org.springframework.format.annotation.DateTimeFormat(iso = org.springframework.format.annotation.DateTimeFormat.ISO.DATE)
+  private LocalDate startDate;
+
+  @JsonProperty("endDate")
+  @org.springframework.format.annotation.DateTimeFormat(iso = org.springframework.format.annotation.DateTimeFormat.ISO.DATE)
+  private LocalDate endDate;
+
+  public StockPrice id(Integer id) {
+    this.id = id;
+    return this;
+  }
+
+  /**
+   * Get id
+   * @return id
+  */
+  @ApiModelProperty(value = "")
+
+
+  public Integer getId() {
+    return id;
+  }
+
+  public void setId(Integer id) {
+    this.id = id;
+  }
+
+  public StockPrice stockPrice(Float stockPrice) {
+    this.stockPrice = stockPrice;
+    return this;
+  }
+
+  /**
+   * Get stockPrice
+   * @return stockPrice
+  */
+  @ApiModelProperty(required = true, value = "")
+  @NotNull
+
+
+  public Float getStockPrice() {
+    return stockPrice;
+  }
+
+  public void setStockPrice(Float stockPrice) {
+    this.stockPrice = stockPrice;
+  }
+
+  public StockPrice startDate(LocalDate startDate) {
+    this.startDate = startDate;
+    return this;
+  }
+
+  /**
+   * Get startDate
+   * @return startDate
+  */
+  @ApiModelProperty(example = "Sat Jan 30 05:30:00 IST 2021", required = true, value = "")
+  @NotNull
+
+  @Valid
+
+  public LocalDate getStartDate() {
+    return startDate;
+  }
+
+  public void setStartDate(LocalDate startDate) {
+    this.startDate = startDate;
+  }
+
+  public StockPrice endDate(LocalDate endDate) {
+    this.endDate = endDate;
+    return this;
+  }
+
+  /**
+   * Get endDate
+   * @return endDate
+  */
+  @ApiModelProperty(example = "Sat Jan 30 05:30:00 IST 2021", required = true, value = "")
+  @NotNull
+
+  @Valid
+
+  public LocalDate getEndDate() {
+    return endDate;
+  }
+
+  public void setEndDate(LocalDate endDate) {
+    this.endDate = endDate;
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    StockPrice stockPrice = (StockPrice) o;
+    return Objects.equals(this.id, stockPrice.id) &&
+        Objects.equals(this.stockPrice, stockPrice.stockPrice) &&
+        Objects.equals(this.startDate, stockPrice.startDate) &&
+        Objects.equals(this.endDate, stockPrice.endDate);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id, stockPrice, startDate, endDate);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class StockPrice {\n");
+    
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    stockPrice: ").append(toIndentedString(stockPrice)).append("\n");
+    sb.append("    startDate: ").append(toIndentedString(startDate)).append("\n");
+    sb.append("    endDate: ").append(toIndentedString(endDate)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
